fdo#44664: printer truncates Landscape orientation pages to Portrait dimensions

Change-Id: I0554d38367a0b00fdc1e3b7fb72d4ad5d537a254